[package]
name = "prism"
version = "0.1.0"
edition = "2024"
description = "An experimental chart library for iced."

[dependencies]
ordered-float = "1.0"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "4b075b9731f4658a885357024cc77dee10e223c3"
features = ["canvas", "advanced"]
