[package]
name = "prism"
description = "An experimental chart library for iced."
homepage = "https://github.com/kunerd/prism"
repository = "https://github.com/kunerd/prism"
readme = "README.md"
license-file = "LICENSE"
keywords = ["iced", "chart"]
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = "1.0"

[dependencies.iced]
version = "0.13"
features = ["canvas", "advanced"]
